# jesi

./: .gitignore  README.md  cosmology.py  cpl.py  desidr2.py  flexknot.py  ia.py  lcdm.py  monaco.py  mwe.py  nested_sampling.py  pantheonplus.py  profile_tests.py  pyproject.toml  run.py  run.sh  run_cpl.py  run_flexknot.py  run_lcdm.py  run_pantheonplus.py  run_wcdm.py  wcdm.py
cosmology/: __init__.py  cosmology.py  cpl.py  flexknot.py  lcdm.py  wcdm.py
jayesian/: __init__.py  nested_sampling.py
jayesian/cosmology/: cpl.py  flexknot.py  wcdm.py
jayesian/likelihoods/: __init__.py  des5y.py  desidr2.py  ia.py  pantheonplus.py
jesi/: __init__.py  nested_sampling.py
jesi/cosmology/: __init__.py  cpl.py  flexknot.py  lcdm.py  wcdm.py
jesi/likelihoods/: __init__.py  des5y.py  desidr2.py  pantheonplus.py
likelihoods/: __init__.py  des5y.py  desidr2.py  ia.py  pantheonplus.py
