[project]
name = "jayesian"
dynamic = ["version"]
description = "Dark Energy Jaxoscopic Instrument"
requires-python = ">=3.11"
dependencies = [
    "anesthetic>=2.10.0",
    "blackjax",
    "tensorflow-probability>=0.25.0",
    "tqdm>=4.67.1",
    "fire",
]

[tool.setuptools.package-data]
jayesian = [
    "likelihoods/data/des5y/*",
    "likelihoods/data/desidr2/*",
    "likelihoods/data/pantheonplus/*"
]

[tool.uv.sources]
blackjax = { git = "https://github.com/handley-lab/blackjax", rev = "nested_sampling" }

[build-system]
requires = ["setuptools_scm>=8"]

[tool.setuptools_scm]
version_file = "jayesian/_version.py"
